Bug 181711 - todos deleted on pc are not deleted from handheld
Summary: todos deleted on pc are not deleted from handheld
Status: RESOLVED FIXED
Alias: None
Product: kpilot
Classification: Unmaintained
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: groot
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-24 02:13 UTC by Douglas Harms
Modified: 2009-01-24 06:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Douglas Harms 2009-01-24 02:13:41 UTC
Version:           commit 915837 (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

When a todo is deleted on the pc, the item is not deleted from the hh.  The problem is the ToDoConduit::initDataProxies determines that the collection has changed since the last sync and deletes the the todo mapping, forcing a firstSync.  The records deleted from the pc (and probably the hh too) are then transferred back to the pc from the hh.

Here's a patch that I think fixes the problem:

Index: conduits/todo/todoconduit.cc
===================================================================
--- conduits/todo/todoconduit.cc        (revision 915864)
+++ conduits/todo/todoconduit.cc        (working copy)
@@ -68,6 +68,7 @@

        TodoSettings::self()->readConfig();
        d->fCollectionId = TodoSettings::akonadiCollection();
+       d->fPrevCollectionId = TodoSettings::prevAkonadiCollection();
 }

 bool TodoConduit::initDataProxies()
Comment 1 Jason 'vanRijn' Kasper 2009-01-24 06:19:24 UTC
SVN commit 915907 by vanrijn:

Fix for another data problem (Thank you Doug!!!). This one was slightly less
irksome in that we refused to let you delete things, no matter how hard you try,
rather than deleting things you wouldn't have wanted us to, but still, data is
data.

BUG:181711


 M  +1 -0      todoconduit.cc  


WebSVN link: http://websvn.kde.org/?view=rev&revision=915907