Fix for another data problem (Thank you Doug!!!). This one was slightly less irksome in that we refused to let you delete things, no matter how hard you try, rather than deleting things you wouldn't have wanted us to, but still, data is data.

BUG:181711

svn path=/branches/KDE/4.2/kdepim/; revision=915907